--- a/code/package.json
+++ b/code/package.json
@@ -13,7 +13,7 @@
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.4",
     "cordova-custom-config": "^5.1.0",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "5.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-appversion": "^1.0.0",
@@ -23,7 +23,7 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^4.3.3",
     "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
@@ -58,7 +58,6 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": " "
       },
-      "cordova-plugin-inappbrowser": {},
       "cordova-plugin-screen-orientation": {},
       "cordova.plugins.diagnostic": {},
       "es6-promise-plugin": {},
@@ -75,7 +74,8 @@
       "cordova-spotify": {},
       "com.virtuoworks.cordova-plugin-canvascamera": {
         "CAMERA_USAGE_DESCRIPTION": "Display video preview"
-      }
+      },
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
